LU-20374 gss: link @u into @s in sk_load_key before setperm

sk_load_key() add_key()s an SSK key into @u then calls
keyctl_setperm() to broaden permissions from the kernel
default 0x3f010000 (POS_ALL | USR_VIEW) to 0x3f3f3f3f. The
setperm needs SETATTR on the key, which the default grants
only via possession (POS_SETATTR is set; USR_SETATTR is
not). Possession requires @u to be linked into the caller's
session keyring chain.

pam_keyinit links @u into @s at interactive PAM login, but
is not part of the default PAM stack for sudo, su, systemd
services, cron, or Pacemaker resource agents. In those
contexts setperm silently fails with EACCES (logged only at
printerr level 2) and the key keeps the kernel default. The
kernel's later request_key upcall to lgss_keyring cannot
keyctl_read() a USR_VIEW-only key, and mount.lustre returns
ENOKEY. lsvcgssd hits the same EACCES when validating
inbound GSS context init RPCs.

Fix: factor sk_link_user_keyring(), which keyctl_link()s @u
into @s so the caller possesses the keys held in @u, and
call it at the top of sk_load_key() before add_key() /
keyctl_setperm(). keyctl_link() is idempotent (success, or
EEXIST which is treated as success, when @u is already
linked). Call it from sk_remove_key() too: 'lgss_sk -R'
keyctl_read()s and keyctl_revoke()s keys in @u, which also
need possession to act on a key still at the restrictive
default, so without this -R cannot clean up a mis-permed
key. Also promote the keyctl_setperm() failure message from
printerr level 2 to level 0 so a future failure is visible
at the default debug level.

Add sanity-sec test_200 that loads a key inside a fresh
anonymous session keyring (via 'keyctl session -') and
asserts the resulting /proc/keys perm is 3f3f3f3f.

Finally, document the existing -R/--remove option in the
lgss_sk.8 man page.

Fixes: 04aa5e079b26 ("LU-8229 ssk: support removing keys from keyring via lgss_sk")
Fixes: f26503384099 ("LU-14479 ssk: explicitly set perm on key")
Test-Parameters: trivial testlist=sanity-sec env=SHARED_KEY=true
Assisted-by: Claude:claude-opus-4-8
Signed-off-by: Matt Raso-Barnett <matt@thelustrecollective.com>
Change-Id: Ia7eabb1bf8479b1c7cc3f21ad7526f8417025e94
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/66665
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Reviewed-by: Marc Vef <mvef@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>